--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
         <li>Aliquam!</li>
         <li>Asperiores!</li>
     </ul>
-    -->
+    --> 
 
-    <!-- localStorage
+
+    
 
     <h2 id="info"></h2>
-
+<!-- localStorage
     <h3 id="counter">0</h3>
     <button id="increase">Arttir</button>
     <button id="decrease">Azalt</button>
@@ -57,6 +58,8 @@
     <button id="decrease">Azalt</button>
     -->
 
+
+    <!-- FormEgsersiz
     <div class="container mt-5">
       <div class="row">
         <div class="col-sm-8 offset-sm-2">
@@ -100,6 +103,7 @@
               <span class="badge bg-primary rounded-pill">14</span>
             </li>
                       -->
+                    -->
           </ul>
         </div>
       </div>
@@ -120,6 +124,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/form-egsersiz.js"></script>
+    <script src="js/array.js"></script>
   </body>
 </html>
