add array methods

--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/array.js"></script>
+    <script src="js/arrayMethods.js"></script>
   </body>
 </html>
