--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/for-while-dongusu.js"></script>
+    <script src="js/loops.js"></script>
   </body>
 </html>
