Objelerde method tanimi

--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="js/object.js"></script>
+    <script src="js/method_in_obje.js"></script>
   </body>
 </html>
